--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pannellum": "^2.5.6",
     "roboto-fontface": "*",
     "stream-browserify": "^3.0.0",
+    "swiper": "^12.0.3",
     "vue": "^3.2.13",
     "vue-fullscreen": "^2.6.1",
     "vue-router": "^4.0.3",
