--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
   "dependencies": {
     "@mdi/font": "^5.9.55",
     "@popperjs/core": "^2.11.8",
-    "aos": "^2.3.4",
+    "aos": "^3.0.0",
     "axios": "^1.8.4",
-    "boostrap": "^2.0.0",
     "bootstrap": "^5.3.3",
-    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "crypto-browserify": "^3.12.1",
     "emailjs-com": "^3.2.0",
@@ -26,7 +24,7 @@
     "vue": "^3.2.13",
     "vue-fullscreen": "^2.6.1",
     "vue-router": "^4.0.3",
-    "vuetify": "^3.0.0-beta.0",
+    "vuetify": "^3.0.0",
     "vuex": "^4.0.0",
     "webfontloader": "^1.0.0"
   },
@@ -42,8 +40,8 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-cli-plugin-vuetify": "~2.5.8",
-    "webpack-plugin-vuetify": "^2.0.0-alpha.0"
+    "sass": "^1.32.0",
+    "vuetify-loader": "^1.9.0"
   },
   "eslintConfig": {
     "root": true,
